--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -494,7 +494,7 @@
 
 
 
-
+/* For Gift Guides "/guides/index" */
 @import url(https://fonts.googleapis.com/css?family=Poppins:300,700);
 .snip1581 {
   float:left;
