--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -46,6 +46,30 @@
   </div>
 
 
+  <!-- <div class="for_sns">
+    <% @hotdeals.each do |hotdeal| %>
+      <div class="wrapping">
+       <div class="image"><img src="<%= hotdeal.h_image %>"></div>
+       <div class="title"><p><%= hotdeal.h_title %></p></div>
+       <div class="info">
+        <table>
+          <tr>
+            <td>$50.00</td>
+            <td>$100.00 | 50% OFF</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>직배송 | X</td>
+            <td>$200 이하 무관세</td>
+            <td>Griffin</td>
+          </tr>
+        </table>
+       </div>
+      </div>
+    <% end %>
+  </div> -->
+
+
 
  </div><!--./wrap-->
 </div><!--./layout-->
