--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -672,3 +672,12 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .all_wrap .all_hotdeals, .all_wrap .all_promocodes{margin:0 1% 20px 1%;}
 .all_wrap .all_hotdeals span, .all_wrap .all_promocodes em{margin-top:20px;display:block;}
 
+.for_sns{width:500px;}
+.for_sns .wrapping{position:relative;}
+.for_sns .wrapping .image{width:500px;height:500px;}
+.for_sns .wrapping .image img{width:100%;height:100%;}
+.for_sns .wrapping .title{position:absolute;top:0;left:0;background:rgba(255,255,255,0.8);padding:5px;}
+.for_sns .wrapping .info{}
+.for_sns .wrapping .info table{border-collapse: collapse;width:100%;}
+.for_sns .wrapping .info table, td, th{border: 1px solid #000;}
+
