--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -25,9 +25,9 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <li><a href="/deals/bestdeals">DAILY DEALS,</a></li>
-        <li><a href="/hotdeals">[ MORE DEALS ],</a></li>
+        <li><a href="/hotdeals"> - MORE DEALS,</a></li>
         <li><a href="/deals/promo_codes">DAILY CODES,</a></li>
-        <li><a href="/promocodes">[ MORE CODES ],</a></li>
+        <li><a href="/promocodes"> - MORE CODES,</a></li>
         <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
