--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -9,7 +9,7 @@
       <%= f.input :sp_image %>
       <%= f.input :sp_link %>
       <%= f.input :sp_title %>
-      <%= f.input :sp_description %>
+      <%= f.input :sp_description, as: :trix_editor %>
       <div class="pricing clearfix">
         <%= f.input :sp_percentage_01 %>
         <%= f.input :sp_percentage_02 %>
