--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -20,6 +20,7 @@
 
 @media screen and (min-width:641px) and (max-width:1199px){
   .cu_sub_nav{margin:180px 0 -20px 0;}
+  .cu_sub_nav ul>li>a{margin-bottom:15px;}
 }
 
 /* Current Location */
