--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -30,7 +30,14 @@
              <% if @storepromotion.sp_promocode.present? %>
                 <div class="extra_info">
                   <em>* Pricing may change and deals can expire fast.</em>
-                  <em class="code_em">* End Date: <%= @storepromotion.sp_end_date %></em>
+                  <em class="code_em">
+                    <% if @storepromotion.sp_spare_60 < DateTime.now %>
+                    <% @storepromotion.sp_spare_60 %>
+                      <em class="expired">This Promo Code has EXPIRED.</em>
+                    <% else %>
+                    * End Date: <%= @storepromotion.sp_end_date %>
+                    <% end %>
+                  </em>
                 </div> 
                 <div class="text_copied intheshow">
                   <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
@@ -38,9 +45,15 @@
               <% else %>
                 <div class="extra_info">  
                  <em>* Pricing may change and deals can expire fast.</em>
-                 <em>* End Date: <%= @storepromotion.sp_end_date %></em>
+                  <% if @storepromotion.sp_spare_60 < DateTime.now %>
+                  <% @storepromotion.sp_spare_60 %>
+                    <em class="expired">This offer has EXPIRED.</em>
+                  <% else %>
+                   * End Date: <%= @storepromotion.sp_end_date %>
+                  <% end %>
                 </div>
               <% end %>
+
             </div>
 
             <div class="btn">
