--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -69,7 +69,12 @@
             
             <% if @promocode.p_extra_deal.present? %><em class="extra_dh">+ <%= @promocode.p_extra_deal %>% Off Extra Deal</em><% end %>
             <% if @promocode.p_coupon_deal.present? %><em class="extra_dh">+ <%= @promocode.p_coupon_deal %> Off Coupon</em><% end %>
-            <em>* Code End Date: <%= @promocode.p_end_date %></em>
+            <% if @promocode.p_spare_50 < DateTime.now %>
+            <% @promocode.p_spare_50 %>
+              <em class="expired">* This promo code has EXPIRED.</em>
+            <% else %>
+             <em>* Code End Date: <%= @promocode.p_end_date %></em>
+            <% end %>
            </div>
 
             <p class="code_line">Click and copy this code then apply it at your checkout</p>
