--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -136,7 +136,7 @@
 .show_wrap .show_box .show_inner span p{font-size:15px;font-weight:100;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
 .show_wrap .show_box .show_inner p{margin:25px 0;font-size:25px;}
 .show_wrap .show_box .show_inner a{text-decoration:none;color:#fff;background:#000;padding:15px 30px;display:inline-block;}
-.show_wrap .show_box .show_inner a em{color:#e47911;text-transform:uppercase;}
+.show_wrap .show_box .show_inner .only_show a em{color:#e47911;text-transform:uppercase;}
 .show_wrap .show_box .show_inner .trix{display:block;margin-top:20px;}
 .show_wrap .show_box .show_inner .trix ul{margin-left:20px;}
 .show_wrap .show_box .show_inner .trix ul li{list-style:disc;}
