--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -83,7 +83,7 @@
             <% end %>
            </div><!--./extra_info-->
 
-            <p class="code_line">Click and copy this code then apply it at your checkout</p>
+            <!-- <p class="code_line">Click and copy this code then apply it at your checkout</p> -->
             <div class="text_copied intheshow">
               <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @promocode.p_promocode %></p></div></div></div>
             </div>
