before adding store deals

--- a/app/views/spcategories/edit.html.erb
+++ b/app/views/spcategories/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Spcategory</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @spcategory %> |
-<%= link_to 'Back', spcategories_path %>
+<div class="layout">
+  <div class="wrap">
+    <div class="dealpage_title">  
+      <%= render 'shared/header_short' %>
+      <h1>Editing Spcategory</h1>
+      <%= render 'form' %>
+      <%= link_to 'Show', @spcategory %> |
+      <%= link_to 'Back', spcategories_path %>
+    </div>
+  </div>
+</div>
