--- a/app/views/spcategories/new.html.erb
+++ b/app/views/spcategories/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Spcategory</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', spcategories_path %>
+<div class="wrap">  
+<%= render 'shared/header_short' %>
+  <div class="hotdeal_wrap">
+    <h1>New Spcategory</h1>
+    <%= render 'form' %>
+    <%= link_to 'Back', spcategories_path %>
+  </div>
+</div>
