--- a/app/views/spcategories/_form.html.erb
+++ b/app/views/spcategories/_form.html.erb
@@ -1,14 +1,18 @@
-<%= simple_form_for(@spcategory) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+<div class="hotdeal_form ">
+  <%= render 'shared/header_short' %>
+  <%= simple_form_for(@spcategory) do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :spc_description %>
-    <%= f.input :display_in_navbar %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :name %>
+      <%= f.input :spc_category_num %>
+      <!-- <%= f.input :display_in_navbar %> -->
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
+  <% end %>
+</div>
+  
