--- a/app/views/spcategories/index.html.erb
+++ b/app/views/spcategories/index.html.erb
@@ -1,32 +1,34 @@
 <!-- <p id="notice"><%= notice %></p> -->
+<div class="layout"><!--layout-->
+  <div class="wrap">  
+    <%= render 'shared/header_short' %>
 
+    
+    <h1 class="dealpage_title">Listing Spcategories | <%= link_to 'New Spcategory', new_spcategory_path %></h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Category</th>
+          <th>Category ID</th>
+          <th>Display in navbar</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-<h1>Listing Spcategories</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Spc name</th>
-      <th>Spc description</th>
-      <th>Display in navbar</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @spcategories.each do |spcategory| %>
-      <tr>
-        <td><%= spcategory.name %></td>
-        <td><%= spcategory.spc_description %></td>
-        <td><%= spcategory.display_in_navbar %></td>
-        <td><%= link_to 'Show', spcategory %></td>
-        <td><%= link_to 'Edit', edit_spcategory_path(spcategory) %></td>
-        <td><%= link_to 'Destroy', spcategory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Spcategory', new_spcategory_path %>
+      <tbody>
+        <% @spcategories.each do |spcategory| %>
+          <tr>
+            <td><%= spcategory.name %></td>
+            <td><%= spcategory.spc_category_num %></td>
+            <!-- <td><%= spcategory.spc_description %></td> -->
+            <td><%= spcategory.display_in_navbar %></td>
+            <td><%= link_to 'Show', spcategory %></td>
+            <td><%= link_to 'Edit', edit_spcategory_path(spcategory) %></td>
+            <td><%= link_to 'Destroy', spcategory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  
+  </div>
+</div>
