--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -49,15 +49,18 @@
 
 /* Store Promotions Main Page ["/storepromotions"]*/
 .sp_wrap{margin-top:35px;font-family: 'Montserrat', sans-serif;}
-.sp_wrap .sp_left{float:left;width:25%;margin-right:2%;border:1px solid #ccc;border-radius:10px;padding:10px 10px 10px 20px;}
+.sp_wrap .sp_left{float:left;width:25%;margin-right:2%;border:1px solid #ccc;border-radius:10px;padding:7px;}
 .sp_wrap .sp_right{float:left;width:73%;}
 
+.sp_wrap .sp_left .sp_menu{}
 .sp_wrap .sp_left .sp_menu ul{}
-.sp_wrap .sp_left .sp_menu ul li{margin-bottom:5px;}
-.sp_wrap .sp_left .sp_menu ul li a{color:#000;font-size:15px;}
+.sp_wrap .sp_left .sp_menu ul li{margin-bottom:5px;background:#08f;padding:5px 15px;border-radius:15px;}
+.sp_wrap .sp_left .sp_menu ul li.admin{background:#000;}
+.sp_wrap .sp_left .sp_menu ul li a{color:#fff;font-size:15px;display:block;}
+.sp_wrap .sp_left .sp_menu .show-more-height{height:365px;overflow:hidden;}
 /* Mobile Menu */
 .featured .sp_m{width:100%;}
-.featured .sm_mobile ul.sp_ul{padding:20px;font-family:'Anton', sans-serif;}
+.featured .sm_mobile ul.sp_ul{padding:20px;font-family:'Anton', sans-serif;overflow:scroll;height:80%;}
 .featured .sm_mobile ul.sp_ul li{line-height:1.1;}
 .featured .sm_mobile ul.sp_ul li a{color:#fff;font-size:40px;text-transform:uppercase;}
 
