--- a/app/views/spcategories/show.html.erb
+++ b/app/views/spcategories/show.html.erb
@@ -1,19 +1,12 @@
 <!-- <p id="notice"><%= notice %></p> -->
+<div class="layout"><!--layout-->
+  <div class="wrap">  
+    <%= render 'shared/header_short' %><br />
+    <p class="dealpage_title"><strong>Store Promotions Category Name: </strong><%= @spcategory.name %></p>
+    <p><strong>Store Promotions Category Number:</strong> <%= @spcategory.spc_description %></p>
+    <p><strong>Display in navbar:</strong> <%= @spcategory.display_in_navbar %></p>
 
-<p>
-  <strong>Spc name:</strong>
-  <%= @spcategory.name %>
-</p>
-
-<p>
-  <strong>Spc description:</strong>
-  <%= @spcategory.spc_description %>
-</p>
-
-<p>
-  <strong>Display in navbar:</strong>
-  <%= @spcategory.display_in_navbar %>
-</p>
-
-<%= link_to 'Edit', edit_spcategory_path(@spcategory) %> |
-<%= link_to 'Back', spcategories_path %>
+    <%= link_to 'Edit', edit_spcategory_path(@spcategory) %> |
+    <%= link_to 'Back', spcategories_path %>
+  </div>
+</div>
